after fixing styling for payment

--- a/vistaraft/index.html
+++ b/vistaraft/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../vistaraft/src/assets/" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/djvhd1shh/image/upload/v1739619547/logoVista_z2ffnz.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vistaraft</title>
   </head>
@@ -11,4 +15,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
- 
