front page ui changed

--- a/vistaraft/index.html
+++ b/vistaraft/index.html
@@ -6,7 +6,9 @@
       rel="icon"
       type="image/svg+xml"
       href="https://res.cloudinary.com/djvhd1shh/image/upload/v1739619547/logoVista_z2ffnz.jpg"
+      
     />
+    <link rel="stylesheet" href="odometer-theme-default.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vistaraft</title>
   </head>
