--- a/vistaraft/index.html
+++ b/vistaraft/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="odometer-theme-default.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vistaraft</title>
+    <title>VISTARAFT</title>
   </head>
   <body>
     <div id="root"></div>
